--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
-    "name": "monofony/admin-bundle",
-    "type": "symfony-bundle",
-    "description": "Monofony admin bundle.",
+    "name": "monofony/admin-pack",
+    "type": "symfony-pack",
+    "description": "Monofony admin pack.",
     "license": "MIT",
     "require": {
         "php": "^7.2",
         "monofony/core-bundle": "^0.4"
     },
     "autoload": {
-        "psr-4": { "Monofony\\Pack\\AdminPack\\": "" },
-        "exclude-from-classmap": ["Recipe/"]
+        "exclude-from-classmap": ["/Recipe/"]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
