--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,28 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3",
-        "monofony/core-bundle": "^0.4"
+        "symfony/routing": "^4.4 || ^5.1",
+        "webmozart/assert": "^1.9",
+        "monofony/admin": "^0.4",
+        "monofony/behat-bridge": "^0.4"
+    },
+    "require-dev": {
+        "behat/behat": "^3.2",
+        "friends-of-behat/page-object-extension": "^0.3",
+        "phpstan/phpstan": "^0.12"
     },
     "autoload": {
         "exclude-from-classmap": ["/.recipe/"]
+    },
+    "autoload-dev": {
+        "psr-4": { "App\\": ".recipe/src" }
+    },
+    "replace": {
+        "monofony/admin": "self.version",
+        "monofony/behat-bridge": "self.version"
+    },
+    "config": {
+        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
