--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,13 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3",
-        "symfony/routing": "^4.4 || ^5.1",
-        "webmozart/assert": "^1.9",
         "monofony/admin": "^0.4",
-        "monofony/behat-bridge": "^0.4"
+        "monofony/admin-contracts": "^0.4",
+        "monofony/behat-bridge": "^0.4",
+        "monofony/core-contracts": "^0.4",
+        "symfony/routing": "^4.4 || ^5.1",
+        "symfony/templating": "^4.4 || ^5.1",
+        "webmozart/assert": "^1.9"
     },
     "require-dev": {
         "behat/behat": "^3.2",
@@ -24,10 +27,6 @@
         "psr-4": {
             "App\\": ".recipe/src"
         }
-    },
-    "replace": {
-        "monofony/admin": "self.version",
-        "monofony/behat-bridge": "self.version"
     },
     "config": {
         "sort-packages": true
