--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,3 +4,4 @@ parameters:
     excludes_analyse:
         - 'vendor/**.php'
         - '**/spec/**.php'
+        - .recipe/src/Dashboard/Statistics/CustomerStatistic.php
