--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,13 @@
         "monofony/admin-contracts": "^0.4",
         "monofony/behat-bridge": "^0.4",
         "monofony/core-contracts": "^0.4",
+        "sonata-project/block-bundle": "^4.2",
+        "sylius/grid-bundle": "^1.6",
+        "sylius/ui-bundle": "^1.7",
+        "symfony/asset": "^4.4 || ^5.1",
         "symfony/routing": "^4.4 || ^5.1",
         "symfony/templating": "^4.4 || ^5.1",
+        "twig/twig": "^2.7",
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
