--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "monofony/core-contracts": "^0.4",
         "sonata-project/block-bundle": "^4.2",
         "sylius/grid-bundle": "^1.8",
-        "sylius/ui-bundle": "^1.8",
+        "monofony/ui-bundle": "dev-master",
         "symfony/asset": "^4.4 || ^5.1",
         "symfony/routing": "^4.4 || ^5.1",
         "symfony/templating": "^4.4 || ^5.1",
