--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3",
-        "monofony/admin": "^0.4",
-        "monofony/admin-contracts": "^0.4",
-        "monofony/behat-bridge": "^0.4",
-        "monofony/core-contracts": "^0.4",
+        "monofony/admin": "dev-master",
+        "monofony/admin-contracts": "dev-master",
+        "monofony/behat-bridge": "dev-master",
+        "monofony/core-contracts": "dev-master",
         "sonata-project/block-bundle": "^4.2",
         "sylius/grid-bundle": "^1.8",
         "monofony/ui-bundle": "dev-master",
