--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3",
-        "monofony/admin": "dev-master",
-        "monofony/admin-contracts": "dev-master",
-        "monofony/behat-bridge": "dev-master",
-        "monofony/core-contracts": "dev-master",
+        "monofony/admin": "^0.5",
+        "monofony/admin-contracts": "^0.5",
+        "monofony/behat-bridge": "^0.5",
+        "monofony/core-contracts": "^0.5",
         "sonata-project/block-bundle": "^4.2",
         "sylius/grid-bundle": "^1.8",
-        "monofony/ui-bundle": "dev-master",
+        "monofony/ui-bundle": "^1.9",
         "symfony/asset": "^4.4 || ^5.1",
         "symfony/routing": "^4.4 || ^5.1",
         "symfony/templating": "^4.4 || ^5.1",
