Add Behat example to test sorting a grid

--- a/.recipe/config/sylius/grids/backend/customer.yaml
+++ b/.recipe/config/sylius/grids/backend/customer.yaml
@@ -17,11 +17,11 @@ sylius_grid:
                 email:
                     type: string
                     label: sylius.ui.email
-                    sortable: email
+                    sortable: true
                 createdAt:
                     type: datetime
                     label: sylius.ui.registration_date
-                    sortable: createdAt
+                    sortable: true
             filters:
                 search:
                     type: string
