--- a/.recipe/config/sylius/grids/backend/customer.yaml
+++ b/.recipe/config/sylius/grids/backend/customer.yaml
@@ -28,6 +28,9 @@ sylius_grid:
                     label: sylius.ui.search
                     options:
                         fields: [email, firstName, lastName]
+                createdAt:
+                    type: date
+                    label: sylius.ui.creation_date
             actions:
                 main:
                     create:
