Exclude paths on PHPStan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,7 @@
 parameters:
     paths:
         - .recipe
-    excludes_analyse:
+    excludePaths:
         - 'vendor/**.php'
         - '**/spec/**.php'
         - .recipe/src/Dashboard/Statistics/CustomerStatistic.php
