Remove Symfony 6 support for now

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "monofony/ui-bundle": "^1.10",
         "sonata-project/block-bundle": "^4.2",
         "sylius/grid-bundle": "^1.9",
-        "symfony/asset": "^5.3 || ^6.0",
-        "symfony/routing": "^5.3 || ^6.0",
-        "symfony/templating": "^5.3 || ^6.0",
+        "symfony/asset": "^5.3",
+        "symfony/routing": "^5.3",
+        "symfony/templating": "^5.3",
         "twig/twig": "^2.7",
         "webmozart/assert": "^1.9"
     },
