Fix Symfony packs for Flex

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "behat/behat": "^3.2",
+        "friends-of-behat/page-object-extension": "^0.3",
         "monofony/admin": "^0.8",
         "monofony/admin-contracts": "^0.8",
+        "monofony/behat-bridge": "^0.8",
         "monofony/core-contracts": "^0.8",
         "monofony/ui-bundle": "^1.10",
+        "phpstan/phpstan": "^0.12",
         "sonata-project/block-bundle": "^4.2",
         "sylius/grid-bundle": "^1.9",
         "symfony/asset": "^5.3",
