--- a/.recipe/config/packages/monofony_admin.yaml
+++ b/.recipe/config/packages/monofony_admin.yaml
@@ -27,6 +27,23 @@ sylius_grid:
             exists: "@SyliusUi/Grid/Filter/exists.html.twig"
             select: "@SyliusUi/Grid/Filter/select.html.twig"
 
+sylius_ui:
+    events:
+        sylius.admin.layout.topbar_left:
+            blocks:
+                sidebar_toggle:
+                    template: "backend/layout/_sidebar_toggle.html.twig"
+                    priority: 30
+                search:
+                    template: "backend/layout/_search.html.twig"
+                    priority: 10
+
+        sylius.admin.layout.topbar_right:
+            blocks:
+                security:
+                    template: "backend/layout/_security.html.twig"
+                    priority: 10
+
 sonata_block:
     blocks:
         sonata.block.service.template:
