--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "phpstan/phpstan": "^0.12",
         "sonata-project/block-bundle": "^4.2",
         "sylius/grid-bundle": "dev-master",
-        "symfony/asset": "^5.3",
-        "symfony/routing": "^5.3",
-        "symfony/templating": "^5.3",
+        "symfony/asset": "5.4.*",
+        "symfony/routing": "5.4.*",
+        "symfony/templating": "5.4.*",
         "twig/twig": "^2.7",
         "webmozart/assert": "^1.9",
         "zenstruck/foundry": "^1.14"
