--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "../../Metapack/AdminPackMeta/.recipe/src"
+            "App\\": "../../Metapack/AdminMeta/.recipe/src"
         }
     },
     "config": {
