Upgrade Sylius dependencies

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
         "monofony/behat-bridge": "^0.8",
         "monofony/core-contracts": "^0.8",
         "monofony/ui-bundle": "^1.10",
+        "pagerfanta/pagerfanta": "^3.0",
         "phpstan/phpstan": "^0.12",
         "sonata-project/block-bundle": "^4.2",
-        "sylius/grid-bundle": "dev-master",
+        "sylius/grid-bundle": "^1.11-alpha",
         "symfony/asset": "5.4.*",
         "symfony/routing": "5.4.*",
         "symfony/templating": "5.4.*",
